tests/fixtures/stl/errors/test_vocab_undefined.stl
// Error: reference to an undefined vocab
// expect-error: undefined vocab `nope`.
vocab c = (nope | tokenize("x"));
prompt p { is { f is text<length=4, vocab=c>; } return { use f; } }
export p as main;
